[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ijson>=3.4.0.post0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "rustworkx>=0.17.1",
    "scipy>=1.15.3",
    "treelib>=1.8.0",
]
